--- a/bower.json
+++ b/bower.json
@@ -5,8 +5,7 @@
     "requirejs": "~2.1.8",
     "backbone": "~1.0.0",
     "jquery": "~2.0.3",
-    "underscore": "~1.5.1",
-    "_compare": "simonfan/_compare"
+    "underscore": "~1.5.1"
   },
   "main": "backbone.db.js"
 }
